[project]
name = "weather-anal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.29.1",
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "llama-cpp-python>=0.3.33",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "requests[socks]>=2.34.2",
    "scikit-learn>=1.9.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "llama-cpp-cuda"
url = "https://abetlen.github.io/llama-cpp-python/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }
torchaudio = { index = "pytorch-cuda" }
llama-cpp-python = { index = "llama-cpp-cuda" }
